# habits-backend

./: Dockerfile  pyproject.toml
app/: main.py
app/api/v1/: api.py  habits.py  user.py
app/core/: config.py
app/db/: base.py
app/models/: __init__.py  action.py  area.py  goal.py  habit.py  status.py  user.py
app/schemas/: area.py  goal.py  habit.py  periodicity.py  status.py  user.py
app/tests/: test.py
docs/: api.md  er.md  openapi.json
