[tool.poetry]
name = "habits-backend"
version = "0.1.0"
description = ""
authors = ["Pavel Mohlyakov <pmokhliakov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
